--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <body>
         <h1>Tafe20S104 is a repository set up to further develop an open source Product</h1>
         <p> Hi, 3 developers are developing the project, Francesco, Jaron, Isaac.</p>
+        <p>The project is developed using MS Visual Studio 2015 UWP – C# accessing to the SQLite database.
+         The initial application was developed under an open source project in the C# .NET platform</p>
         <p> Thank you for visting Tafe20S104 site!</p>
    </body>
 </html>
